fix: fix overflow w/o change in height

--- a/client/dashboard/app/styles/components/UserProfile.scss
+++ b/client/dashboard/app/styles/components/UserProfile.scss
@@ -117,17 +117,19 @@
     color: #fff;
     margin-top: 1.7px;
     .dropzone {
-      min-height: 2.8rem;
+      height: 2.8rem;
       border-radius: 5px;
-      padding: 0.5rem 1rem 0.5rem 0rem;
+      padding: 0.75rem 1rem 0.75rem 0rem;
       text-align: center;
       align-items: center;
       cursor: pointer;
       background-color: var(--color-bg-alt) ;
       .text{
+        height: 1.5rem;
         color: var(--color-placeholder);
         align-self: center;
-        word-wrap: break-word;
+        word-break: break-all;
+        overflow: hidden;
       }
     }
   }
